fix: Make the NPC treasure tab's editor readable

--- a/src/style/shared/markdown-editor-fixes.css
+++ b/src/style/shared/markdown-editor-fixes.css
@@ -12,6 +12,7 @@
 
 .sheet--npc {
   .sheet-tab {
+    &--treasure,
     &--description {
       .CodeMirror, .EasyMDEContainer, .CodeMirror-sizer {
         min-height: 382px;
